# DeckView

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  cache_manager.py  conversion.py
frontend/static/css/: style.css
frontend/static/js/: app.js  theme.js  viewer.js
frontend/templates/: index.html  viewer.html
src/deckview/: __main__.py  cli.py  main.py
src/deckview/api/: library.py
src/deckview/core/: config.py
src/deckview/schemas/: document.py
src/deckview/services/: conversion.py  library.py  registry.py  thumbnail.py  watcher.py
src/deckview/web/static/css/: style.css  viewer.css
src/deckview/web/static/js/: app.js  viewer.js
src/deckview/web/templates/: index.html  viewer.html
